# encrusted

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  webpack.dev.js  webpack.prod.js
src/: dev.html  index.html  main.css
src/js/: Listener.js  Rooms.js  Tree.js  WorkerController.js  fileDB.js  index.js  measure.js  middleware.js  reducer.js  worker.js
src/js/components/: DebugPanel.js  ErrorModal.js  Header.js  Help.js  Instructions.js  Launcher.js  ModalController.js  Move.js  ObjectTree.js  Restore.js  RoomMap.js  Settings.js  Spoken.js  Transcript.js  ZMachine.js
src/rust/: Cargo.toml  buffer.rs  frame.rs  instruction.rs  main.terminal.rs  main.web.rs  options.rs  quetzal.rs  traits.rs  ui_terminal.rs  ui_web.rs  zmachine.rs
tests/: curses.z3  curses.z3.regtest  czech.js  czech.z3.regtest  czech.z4  czech.z4.regtest  czech.z5.regtest  czech.z8.regtest  minizork.z3.regtest  praxix.z5.regtest  regtest.py  runtests.sh
tests/expected/: czech.out3  czech.out4  czech.out5  czech.out8  expected.z3.txt  expected.z4.txt  expected.z5.txt
