[package]
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
name = "encrusted"
version = "1.1.0"
description = "A z-machine (interpreter) for Infocom-era text adventure games"
repository = "https://github.com/demille/encrusted"
readme = "README.md"
license = "MIT"

[[bin]]
name = "encrusted"
path = "src/rust/main.terminal.rs"

[lib]
crate-type = ["cdylib"]
name = "web"
path = "src/rust/main.web.rs"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
base64 = "0.10.1"
enum_primitive = "0.1.1"
rand = "0.4.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
atty = "0.2.11"
clap = "2.32.0"
lazy_static = "1.2.0"
regex = "1.1.0"
term_size = "0.3.1"
